--- a/app/views/pic_templates/edit_form.html.erb
+++ b/app/views/pic_templates/edit_form.html.erb
@@ -1,12 +1,12 @@
-<h1> Edit Photo <%= @photo_id %></h1>
+<h1>Edit Photo <%= @photo.id %></h1>
 
-<form action="/update_photo/:the_id">
+<form action="/update_photo/<%= @photo.id %>">
   <div>
     <label for="source_input">
       Image URL
     </label>
 
-    <input id="source_input" type="text" name="the_source" value="@source">
+    <input id="source_input" type="text" name="the_source" value="<%= @photo.source %>">
   </div>
 
   <div>
@@ -14,7 +14,7 @@
       Caption
     </label>
 
-    <input id="caption_input" type="text" name="the_caption" value="@caption">
+    <input id="caption_input" type="text" name="the_caption" value="<%= @photo.caption %>">
   </div>
 
   <button>
